Fixed an issue where schedule tags could not be aligned properly. Fixed ticket-cell title in tickets.html

--- a/assets/stylesheets/_schedule.scss
+++ b/assets/stylesheets/_schedule.scss
@@ -166,7 +166,7 @@
 }
 
 .schedule-conference {
-	display: inline-block;
+	//display: inline-block;
 	overflow-y: hidden;
 	margin-bottom: 2em;
 	padding-bottom: 1.5em;
