--- a/assets/stylesheets/_tickets.scss
+++ b/assets/stylesheets/_tickets.scss
@@ -190,7 +190,7 @@
 	}
 
 	#tickets-contents-cell {
-		padding: 1em 0 0 1em;
+		padding: 1em 0.5em 0 1em;
 	}
 
 	.tickets-title {
